# peripety

./: .rustfmt.toml  Cargo.toml  Makefile  README.md  TODO  USE_CASES.md  dmmp.sh  lvm_tp.sh  scsi.sh
doc/: DEV_GUIDE.md  prpt.1
etc/: peripety.conf  peripetyd.conf  peripetyd.service  rsyslog-peripety.conf
examples/fs/: ext4_mount_lv_mpath_scsi.json
examples/mpath/: mpath_fc_path_offline.json  mpath_fc_path_online.json
src/: journalctl_query.sh  peripety_design.odg
src/peripety/: Cargo.toml  blk_info.rs  dm.rs  error.rs  event.rs  filter.rs  lib.rs  scsi.rs
src/peripety/src/: blk_info.rs  dm.rs  error.rs  event.rs  lib.rs  scsi.rs  sysfs.rs
src/peripety_c/: Cargo.toml  lib.rs  peripety.h
src/peripetyd/: Cargo.toml  collector.rs  conf.rs  data.rs  fs.rs  main.rs  misc.rs  mpath.rs  scsi.rs
src/peripetyd/src/: buildin_regex.rs  collector.rs  conf.rs  data.rs  dm.rs  fs.rs  main.rs  mpath.rs  peripetyd.conf  scsi.rs
src/plugins/kmsg/: Cargo.toml
src/plugins/kmsg/src/: main.rs
src/plugins/mpath/: Cargo.toml
src/plugins/mpath/src/: main.rs
src/plugins/stdout/: Cargo.toml
src/plugins/stdout/src/: main.rs
src/prpt/: Cargo.toml  prpt.rs
src/prpt/src/: main.rs
src/sdjournal/: Cargo.toml  lib.rs
src/sdjournal/src/: lib.rs
tests/: bad_disk_targetcli.sh  dmmp.sh  fs.sh  fs_lvm_dmmp.sh  lvm_tp.sh  scsi.sh
