[package]
name = "peripety"
version = "0.1.2"
authors = ["Gris Ge <fge@redhat.com>"]

[lib]
name = "peripety"
path = "lib.rs"

[dependencies]
sdjournal = { path = "../sdjournal", version = "*"}
serde = ">=1.0"
serde_json = ">=1.0"
serde_derive = ">=1.0"
regex = ">=0.2"
libc = ">=0.2"
libmount = ">=0.1.10"
chrono = ">=0.4"
