[package]
name = "peripetyd"
version = "0.1.2"
authors = ["Gris Ge <fge@redhat.com>"]

[[bin]]
name = "peripetyd"
path = "main.rs"

[dependencies]
peripety = { path = "../peripety" }
sdjournal = { path = "../sdjournal" }
nix = "0.14"
regex = "1"
serde = "1"
serde_derive = "1"
toml = "0.5"
chrono = "0.4"
libc = "0.2"
uuid = { version = "0.7", features = ["v4"]}
