[package]
name = "prpt"
version = "0.1.2"
authors = ["Gris Ge <fge@redhat.com>"]

[[bin]]
name = "prpt"
path = "prpt.rs"

[dependencies]
peripety = { path = "../peripety", version = "*"}
sdjournal = { path = "../sdjournal", version = "*"}
nix = ">=0.10"
clap = "^2.31"
chrono = ">=0.4"
libc = ">=0.2"
libnotify = ">=1.0"
