[package]
name = "prpt"
version = "0.1.2"
authors = ["Gris Ge <fge@redhat.com>"]

[[bin]]
name = "prpt"
path = "prpt.rs"


[features]
default = []
notify = ["libnotify"]

[dependencies]
peripety = { path = "../peripety" }
sdjournal = { path = "../sdjournal" }
nix = "0.14"
clap = "2.31"
chrono = "0.4"
libc = "0.2"
libnotify = { version = "1", optional = true }
